@@ -1,5 +1,7 @@
 
 0.17  2013-10-30
+  - Added cursor support for aggregation.
+  - Added add_batch method to Mango::Cursor.
   - Added from_epoch method to Mango::BSON::ObjectID.
 
 0.16  2013-10-12
